objects/Inventory_Cost_History_Custom__c/Inventory_Cost_History_Custom__c.object-meta.xml
<CustomObject>
    <label>Inventory Cost History Custom</label>
    <nameField>
        <displayFormat>ICH-{000000}</displayFormat>
        <label>Inventory Cost History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Cost History Custom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>