objects/Inventory_Cost_History_Custom__c/fields/Cost_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Cost_Change_Date__c</fullName>
    <label>Cost Change Date</label>
    <type>Date</type>
</CustomField>