objects/Inventory_Cost_History_Custom__c/fields/Inventory_Cost__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Cost</label>
    <referenceTo>AcctSeed__Inventory_Cost__c</referenceTo>
    <relationshipLabel>Inventory Cost History Custom</relationshipLabel>
    <relationshipName>Inventory_Cost_History_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>