objects/Inventory_Cost_History_Custom__c/fields/New_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>New_Unit_Cost__c</fullName>
    <label>New Unit Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>