objects/Inventory_Cost_History_Custom__c/fields/Previous_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Previous_Unit_Cost__c</fullName>
    <label>Previous Unit Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>